# jasmin-lsp

./: .gitignore  .gitmodules  ARCHITECTURE.md  FEATURES.md  LICENSE  QUICKSTART.md  README.md  config.json  default.nix  dev.nix  dune-project  dune_test  jasmin-lsp.opam  pixi.toml  test.sh  test_tree_structure.ml
.github/workflows/: ci.yml
dev_doc/: ADDITIONAL_CRASH_FIXES.md  BUILD_FIX.md  CLEANUP_SUMMARY.md  CLOSE_BUFFER_DIAGNOSTICS.md  COMPLETE_FIX_SESSION.md  COMPLETE_TYPE_INFORMATION.md  CONSTANT_COMPUTATION.md  CONSTANT_VALUE_DISPLAY.md  CRASH_FIXES.md  CRASH_FIX_SUMMARY.md  CROSS_FILE_HOVER_FIX.md  CROSS_FILE_SYMBOL_RESOLUTION_FIXED.md  CROSS_FILE_TESTING.md  CROSS_FILE_VARIABLES_FIXED.md  DEPENDENT_DIAGNOSTICS.md  DIAGNOSTICS_DEBUG_STATUS.md  DIAGNOSTICS_FIX.md  DISK_FILE_CRASH_FIX.md  EXTENSION_INTEGRATION.md  FEATURE_TEST_ANALYSIS.md  FILE_LOGGING.md  FILE_LOGGING_IMPLEMENTATION.md  FINAL_CRASH_FIX_REPORT.md  FINAL_VERIFICATION.md  FIX_SUMMARY.md  FROM_REQUIRE_NAMESPACE_FIX.md  HANGING_ISSUE_ANALYSIS.md  HOVER_DEMO.py  HOVER_DOCUMENTATION_FEATURE.md  HOVER_FIX_SUMMARY.md  HOVER_TYPE_INFORMATION.md  HOVER_VALUE_EXPANDABLE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KEYWORD_HOVER.md  KEYWORD_HOVER_SUMMARY.md  MANUAL_TEST_HOVER.sh  MASTER_FILE_FEATURE.md  MASTER_FILE_IMPLEMENTATION.md  MLDSA_DEMO.md  (+37 more)
jasmin-lsp/: ArchDef.ml  Config.ml  Logger.ml  Priority.ml  ServerState.ml  dune  jasmin_lsp.ml
jasmin-lsp/Document/: AstIndex.ml  DocumentStore.ml  DocumentStore.mli  ExprEvaluator.ml  SymbolTable.ml  SymbolTable.mli
jasmin-lsp/Io/: Channel.ml  Logger.ml
jasmin-lsp/Parser/: parser.ml
jasmin-lsp/Protocol/: Channel.ml  EventError.ml  Logger.ml  LspProtocol.ml  LspProtocol.ml.bak  LspProtocol.mli  RpcProtocol.ml  RpcProtocolEvent.ml
jasmin-lsp/TreeSitter/: TreeSitter.ml  TreeSitter.mli  tree_sitter_stubs.c
test/: PYTEST_GUIDE.md  QUICKSTART.md  README.md  conftest.py  demo_hover_types.py  pytest.ini  requirements.txt  run_crash_tests.sh  run_tests.py  run_tests.sh  test.sh  test_all.sh  test_char_pos.py  test_complex_types.py  test_constant_types.py  test_crash.py  test_crash_scenarios.py  test_cross_file_hover.py  test_direct.sh  test_doc_symbols.py  test_from_require_comprehensive.py  test_function_hover.py  test_goto_def.py  test_keyword_hover.py  test_lsp.py  test_lsp.sh  test_master_file.py  test_mldsa.py  test_multi_file_crash.py  test_multi_var_hover.py  test_namespace_logs.sh  test_param_structure.ml  test_parse_params.py  test_rapid_changes_debug.py  test_real_world.py  test_require_navigation.py  test_scope_bug.py  test_simple.py  test_stress_quick.py  test_struct  (+7 more)
test/debug_scripts/: README.md  check_positions.py  check_positions2.py  check_positions3.py  check_scope_positions.py  check_var_a_positions.py
test/fixtures/: arrays_test.jazz  documented_code.jazz  documented_lib.jinc  indented_doc.jazz  main_program.jazz  math_lib.jazz  namespace_test.jazz  param_doc_test.jazz  references_test.jazz  simple_function.jazz  syntax_errors.jazz  test_constants.jinc  test_param.jazz  test_params.jazz  types_test.jazz
test/test_crash/: __init__.py  test_robustness.py
test/test_cross_file/: __init__.py  test_cross_file_details.py  test_from_require.py  test_from_require_comprehensive.py  test_namespace_resolution.py  test_require_statements.py  test_scope_bug.py  test_simple_scope.py  test_transitive.py  test_transitive_deps.py  test_transitive_simple.py
test/test_diagnostics/: __init__.py  test_close_buffer_diagnostics.py  test_crypto_sign_diagnostic.py  (+7 more)
(+79 files in other folders)
