(rule
 (targets libtree-sitter-jasmin.a)
 (deps (source_tree %{project_root}/tree-sitter-jasmin))
 (action
  (run cp %{project_root}/tree-sitter-jasmin/libtree-sitter-jasmin.a libtree-sitter-jasmin.a)))

(executable
 (name jasmin_lsp)
 (public_name jasmin-lsp)
 (flags (:standard -w -27-32 -g
   -cclib -L%{env:CONDA_PREFIX=/usr/local}/lib
   -cclib -Ljasmin-lsp
   -cclib -ltree-sitter
   -cclib -ltree-sitter-jasmin
   -cclib -Wl,-rpath,%{env:CONDA_PREFIX=/usr/local}/lib))
 (foreign_stubs
  (language c)
  (names tree_sitter_stubs)
  (flags -I%{env:CONDA_PREFIX=/usr/local}/include
         -I%{project_root}/tree-sitter-jasmin/src
         -I%{project_root}/tree-sitter-jasmin/bindings/c))
 (libraries jasmin.jasmin lsp yojson lwt lwt.unix cmdliner batteries ppx_yojson_conv_lib)
 (preprocess
   (pps ppx_yojson_conv lwt_ppx)
 )
)

(include_subdirs qualified)